--- a/src/styles/homepage.module.scss
+++ b/src/styles/homepage.module.scss
@@ -13,7 +13,7 @@
 }
 
 
-$transition-mode: 0.7s ease-in-out;
+$transition-mode: 0.3s ease-in-out;
 .powerCard {
     transition: all $transition-mode;
 
@@ -52,7 +52,7 @@ $transition-mode: 0.7s ease-in-out;
 
         z-index: -1;
 
-        background-color: white;
+        background-color: $home-background-light;
         background-image: radial-gradient($home-background 10%, transparent 11%),
             radial-gradient($home-light-up 10%, transparent 11%);
         background-size: 20px 20px;
