--- a/src/styles/homepage.module.scss
+++ b/src/styles/homepage.module.scss
@@ -8,7 +8,8 @@
     position: relative;
     top: 0;
     left: 0;
-    min-height: 100vh;
+    margin-top: 10vh;
+    min-height: 70vh;
     z-index: 10;
 
     & > h1 {
@@ -17,63 +18,5 @@
         text-align: center;
         font-size: 4rem;
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    }
-}
-
-
-$transition-mode: 0.15s ease-in-out;
-.powerCard {
-    transition: all $transition-mode;
-
-    position: relative;
-    left: 0;
-    top: 0;
-
-    text-align: center;
-    font-weight: 700;
-    color: $foreground;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    & .powerTitle {
-        font-size: 2rem;
-    }
-
-    border-width: 3px;
-    border-color: $foreground;
-    border-radius: 5px;
-
-    &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-
-        width: 100%;
-        height: 100%;
-        border-radius: 5px;
-
-        z-index: -1;
-
-        background-color: black;
-        background-image: radial-gradient($background 10%, transparent 11%);
-        background-size: 20px 20px;
-        background-position: 0 0, 30px 30px;
-        background-repeat: repeat;
-
-        transition: all $transition-mode;
-    }
-
-    &:hover {
-        left: -15px;
-        top: -15px;
-
-        &::before {
-            left: 15px;
-            top: 15px;
-        }
     }
 }
