--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -6,14 +6,35 @@
 
     position: relative;
     top: 0;
-    left: 0;  
+    left: 0;
     & .button {
-        font-size: 1.2rem;
+        font-size: 1rem;
+        padding: 0.4rem;
+        border-radius: 10px;
+        transition: background-color 0.2s ease-in-out;
+        // transition: color 0.4s ease-in-out;
+    }
+
+    & .button:hover {
+        background-color: $yellow;
+        // color: white;
     }
 }
 
 .logo {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 700;
-    font-size: 1.25rem;
+    font-size: 1.1rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.3rem;
+
+    &>img {
+        display: inline;
+        height: 20px;
+        width: 20px;
+        border-radius: 25px;
+    }
 }
