--- a/src/styles/homepage.module.scss
+++ b/src/styles/homepage.module.scss
@@ -4,19 +4,114 @@
     background-color: $background;
 }
 
+.banner {
+    padding: 0;
+    min-height: 80vh;
+
+    background-image: url("https://source.unsplash.com/77eFt5ZlUyc/1920x1080");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    .bannerImage {
+        height: 200px;
+        width: 200px;
+
+    }
+
+    .bannerContent {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        height: 70%;
+
+        margin-bottom: 40px;
+        
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+        }
+         
+        border-radius: 25px;
+        background-color: rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        color: white;
+
+        & .bannerTitle {
+            font-size: 2rem;
+            font-weight: 600;
+            margin: 0;
+            text-align: center;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            & .bannerSubtitle {
+                font-size: 1rem;
+                margin: 0;
+            }
+        }
+
+         
+    }
+    & .waves {
+        position: absolute;
+        bottom: 0vh;
+        left: 0;
+        // width: 100%;        
+        transform: translateY(30%);
+    }  
+}
+
 .homeContainer {
+    margin: 0;
+
+    min-height: 20vh;
+    width: 100%;
+    padding: 5px 20px 50px 20px;
+    margin: auto;
+    
+
     position: relative;
     top: 0;
     left: 0;
-    margin-top: 10vh;
-    min-height: 70vh;
+    
     z-index: 10;
 
-    & > h1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    &>hr {
+        width: 90%;
+        border-top: 2px solid $blue;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    &>h1 {
         width: 100%;
-        margin: 20px;
+        // margin: 20px;
         text-align: center;
-        font-size: 4rem;
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-size: 1.75rem;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+
+    & .cardContainer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        width: 100%;
+        margin: 0;
+        padding: 0;
+
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+        }
     }
 }
+
