--- a/src/styles/powercard.module.scss
+++ b/src/styles/powercard.module.scss
@@ -1,68 +1,86 @@
 @import "./_variables.scss";
 
-$transition-mode: 0.15s ease-in-out;
-.powerCard {
-    transition: all $transition-mode;
 
+.card {
     position: relative;
-    left: 0;
     top: 0;
-
-    text-align: center;
-    font-weight: 700;
-    color: $foreground;
+    left: 0;
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
+    gap: 10px;
 
-    & .powerTitle {
-        font-size: 2rem;
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    padding: 0;
+
+    // border-radius: 25px;
+    border: 0px solid $blue;
+    background-color: rgba($violet, 0.1);
+    // background-color: #F3F4F5;
+    box-shadow: 0 5px 5px $blue;
+
+    transition: all 0.2s ease-in-out;
+
+    & > .iconContainer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        margin: auto;
+        padding: 0;
     }
 
-    & .smallTitle {
-        font-size: 1.25rem;
-    }
-
-    border-width: 3px;
-    border-color: $foreground;
-    border-radius: 5px;
-
-    &::before {
-        content: "";
-        position: absolute;
+    & > .cardBody {
+        position: relative;
         top: 0;
         left: 0;
 
+        height: 45%;
         width: 100%;
-        height: 100%;
-        border-radius: 5px;
+        margin: 0;
+        // border-radius:  0  0 25px 25px; 
+        padding-top: 10px;
 
-        z-index: -1;
+        color: white;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        
+        background: rgb(100,236,218);
+        background: linear-gradient(0deg, rgba(100,236,218,1) 0%, rgba(160,205,237,1) 100%);
 
-        background-color: black;
-        background-image: radial-gradient($background 10%, transparent 11%);
-        background-size: 20px 20px;
-        background-position: 0 0, 30px 30px;
-        background-repeat: repeat;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
 
-        transition: all $transition-mode;
+
+        & .wave {
+            position: absolute;
+            top: 0;
+            left: 0;
+            transform: translateY(-90%);
+        }
+
+        & .cardTitle {
+            font-size: 1.5rem;
+            font-weight: 600;
+            margin: 0;
+            text-align: center;
+        }
+
+        & .cardSubtitle {
+            font-size: 1rem;
+            margin: 0;
+            text-align: center;
+        }
     }
 
-}
-
-.detach {
-    position: relative;
-    left: 0;
-    top: 0;
     &:hover {
-        left: -15px;
-        top: -15px;
-
-        &::before {
-            left: 15px;
-            top: 15px;
-        }
+        top: -10px;
+        // left: -5px;
+        // box-shadow: 0 10px 10px $blue;
     }
 }
