--- a/src/styles/homepage.module.scss
+++ b/src/styles/homepage.module.scss
@@ -66,10 +66,11 @@
 .homeContainer {
     margin: 0;
 
-    min-height: 20vh;
+    // min-height: 20vh;
     width: 100%;
     padding: 5px 20px 50px 20px;
     margin: auto;
+    
     
 
     position: relative;
