--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -1,9 +1,6 @@
 @import "./_variables.scss";
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
     width: 100%;
     min-height: 200px;
     background-color: $blue;
@@ -16,11 +13,10 @@
     & .waves {
         position: absolute;
         z-index: 1;
-        object-position: left top;
-
-        object-fit: cover;
+        top: 0;
+        left: 0;
         width: 100%;
-        // height: 100%;
+        height: 100%;
         margin: 0;
         padding: 0;
     }
