--- a/src/styles/homepage.module.scss
+++ b/src/styles/homepage.module.scss
@@ -100,18 +100,22 @@
     }
 
     & .cardContainer {
-        display: flex;
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 300px 100px;
+        justify-items: center;
         align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
 
-        width: 100%;
+        width: 80%;
         margin: 0;
         padding: 0;
+        
+        & .contact{
+            // item spans 4 columns and 1 row
+            grid-column: 1 / 5;
+            grid-row: 2 / 3;
 
-        @media screen and (max-width: 768px) {
-            flex-direction: column;
+            width: 95%!important;
         }
     }
 }
