--- a/src/styles/team.module.scss
+++ b/src/styles/team.module.scss
@@ -44,6 +44,7 @@
                 height: 150px;
                 width: 150px;
                 border-radius: 40%;
+                object-fit: cover;
             }
         }
     }
