--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -27,6 +27,14 @@
     }
 }
 
+.contactContainer {
+    min-height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .disclaimer {
     margin-top: 100px;
     &>h1 {
