--- a/src/styles/homepage.module.scss
+++ b/src/styles/homepage.module.scss
@@ -117,6 +117,11 @@
 
             width: 95%!important;
         }
+
+        @media screen and (max-width: 1000px) {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 300px 300px;
+        }
     }
 }
 
