--- a/src/styles/powercard.module.scss
+++ b/src/styles/powercard.module.scss
@@ -79,6 +79,7 @@
         font-weight: 600;
         margin: 0;
         text-align: center;
+        color: rgb(84, 122, 156);
     }
 
     & .cardSubtitle {
