--- a/src/styles/homepage.module.scss
+++ b/src/styles/homepage.module.scss
@@ -8,7 +8,7 @@
     padding: 0;
     min-height: 80vh;
 
-    background-image: url("https://source.unsplash.com/77eFt5ZlUyc/1920x1080");
+    background-image: url("../assets/homepage.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -33,7 +33,7 @@
         }
          
         border-radius: 25px;
-        background-color: rgba(0, 0, 0, 0.1);
+        background-color: rgba(0, 0, 0, 0.3);
         padding: 20px;
         color: white;
 
